--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <canvas id="canvas1"></canvas>
-  <img id="worm" src="">
-  <img id="ghost" src="">
-  <img id="spider" src="">
+  <img id="worm" src="https://stackblitz.com/files/web-platform-irt7ue/github/RareFonder/Enemy-Types/main/enemy_worm.png">
+  <img id="ghost" src="https://stackblitz.com/files/web-platform-irt7ue/github/RareFonder/Enemy-Types/main/enemy_ghost.png">
+  <img id="spider" src="https://stackblitz.com/files/web-platform-irt7ue/github/RareFonder/Enemy-Types/main/enemy_spider.png">
 
   <script src="script.js"></script>
 </body>
